--- a/SocialDistribution/authors/templates/authors/listUsers.html
+++ b/SocialDistribution/authors/templates/authors/listUsers.html
@@ -11,12 +11,21 @@
       </tr>
     </thead>
 
-    {% for data in data %}
     <tbody>
+        {% if q %}
+
       <tr>
-        <td>{{ data.username }}</td>
+        {% for result in results %}
+        <td>{{ result.username }}</td>
+        {% endfor %}
       </tr>
-      {% endfor %}
+      {% else %}
+
+      <tr>
+        <td>Hey! You Forgot To Search</td>
+      </tr>
+
+      {% endif %}
     </tbody>
   </table>
 
