--- a/SocialDistribution/authors/templates/authors/navbar.html
+++ b/SocialDistribution/authors/templates/authors/navbar.html
@@ -12,8 +12,11 @@
           <a class="nav-link bg-dark text-white" href="#">Profile</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" method = POST action="{% url 'search' %}">
+
+        {% csrf_token %}
+
+        <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search Users" aria-label="Search">
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
       </form>
 
