--- a/SocialDistribution/authors/templates/authors/login.html
+++ b/SocialDistribution/authors/templates/authors/login.html
@@ -23,6 +23,17 @@
         <form method="POST">
             {% csrf_token %}
             {{ login_form|crispy }}
+            {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    {{ message }}
+                </div>
+                {% endfor %}
+            </ul>
+            {% endif %}
             <button class="btn btn-info btn-block mb-4" type="submit">Login</button>
         </form>
         <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
