--- a/SocialDistribution/authors/templates/authors/register.html
+++ b/SocialDistribution/authors/templates/authors/register.html
@@ -22,7 +22,18 @@
         <h1 class="text-center">Register</h1>
         <form method="POST">
             {% csrf_token %}
-            {{ register_form|crispy }}                    
+            {{ register_form|crispy }}   
+            {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    {{ message }}
+                </div>
+                {% endfor %}
+            </ul>
+            {% endif %}                 
             <button class="btn btn-info btn-block mb-4" type="submit">Register</button>
         </form>
         <p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
