--- a/SocialDistribution/authors/templates/pages/home.html
+++ b/SocialDistribution/authors/templates/pages/home.html
@@ -27,65 +27,78 @@ this is amazing
 </div>
 
 <script>
-    function handlePostCreateForDidSubmit(event){
+    function hanlePostFormSubmit(event){
         event.preventDefault()
         const myForm = event.target
-        const myFormData = new FormData(myForm) //for images
+        const myFormData = new FormData(myForm)
         const url = myForm.getAttribute("action")
         const method = myForm.getAttribute("method")
-        const xhr = new XMLHttpRequest() //xhr =some class
+        const xhr = new XMLHttpRequest()
         xhr.open(method, url)
-        xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest")
-        xhr.setRequestHeader("X-Requested_With", "XMLHttpRequest")
         xhr.onload = function(){
             const serverResponse = xhr.response
-            //console.log(serverResponse)
-            formatpostElement()
+            const postsEl = document.getElementById('posts')
+            LoadPosts(postsEl)
         }
         xhr.send(myFormData)
     }
     const postCreateFormEl = document.getElementById("post-create-form")
-    postCreateFormEl.addEventListener("submit", handlePostCreateForDidSubmit)
+    postCreateFormEl.addEventListener("submit", handlePostCreateFormSubmit()
 
-    const postsEl = document.getElementById("posts")//get an htlml element
+    const postsEl = document.getElementById('posts')
 
-    function loadPosts(postsElement) {
-        const xhr = new XMLHttpRequest() //xhr =some class
-        const method = 'GET' //Post
-        const url = "/posts" 
+    function LoadPosts(postsElement){
+        const xhr = new XMLHttpRequest();
+        const method = 'GET' //POST
+        const url = "/posts"
         const responseType = "json"
-        xhr.responseType = responseType   
+        xhr.responseType = responseType
         xhr.open(method, url)
-        xhr.onload = function(){ 
+        xhr.onload = function(){
             const serverResponse = xhr.response
-            var listedItems = serverResponse
-            var finalposts = "" 
+            var listedItems = serverResponse.response
+            var finalPostStr = ""
             var i;
-            for (i=0; i<listedItems.length; i++){
-                var postobj = listedItems[i]
-                var currentItem = formatpostElement(postobj)
-                finalposts += currentItem
+            for (i=0; i<listenedItems.length; i++) {
+                var postObj = listedItems[i]
+                var currentItem = formatPostElement(postObj)
+                finalPostStr += currentItem
             }
-            postsElement.innerHTML = finalposts
+            postsElement.innerHTML = finalPostStr
         }
         xhr.send()
     }
-
-    loadPosts(postsEl)
-
-    function handleDidLike(post_id, courrentCount){
-        console.log(post_id, courrentCount)
-    }
-    function LikeBtn(post){
-        return "<button class='btn btn-primary btn-sm' onclick=handleDidLike(" +post.id +"," +post.likes+")>"+ post.likes+ "Likes</button>"
-    }
-
-    function formatpostElement(post){
-        var formattedposts = "<div class= 'col-10 border rounded py-3 mb-4 post'>" +"<p>"+ post.content + "</p><div class='btn-group'>" + LikeBtn(post)+ "</div></div>"
-        return formattedposts
-    }
-
+    LoadPosts(postsEl)
     
 
+    function handleLike (post_id, currentCount){
+        console.log(post_id, currentCount)
+    }
+    function LikeBtn(post){
+        return "<button class='btn btn-primary btn-sm' onclick=handleLike(" + 
+        post.id + ", "+ post.likes + ")>" + post.likes + " Likes</button>"
+    }
+    function formatPostElement(post){
+        var formattedPost = "<div class='col-10 border py-3 mb=4 post' id='post-" + post.id 
+        +"'><p>" + post.content 
+            + "</p><div class='btn-group'>" + LikeBtn(post) +
+            "</div></div>"
+        return formattedPost
+    }
+    xhr.responseType = responseType
+    xhr.open(method, url)
+    xhr.onload = function(){
+        const serverResponse = xhr.response
+        var listedItems = serverResponse.response
+        var finalPostStr = ""
+        var i;
+        for (i=0; i<listenedItems.length; i++) {
+            var postObj = listedItems[i]
+            var currentItem = formatPostElement(postObj)
+            finalPostStr += currentItem
+        }
+        postsElement.innerHTML = finalPostStr
+ ]   }
+    xhr.send()
 </script>
 {% endblock content%} 
