--- a/SocialDistribution/authors/templates/authors/register.html
+++ b/SocialDistribution/authors/templates/authors/register.html
@@ -1,52 +1,23 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<!DOCTYPE html>
+<html>
+<head>
     <title>Page Title</title>
-  </head>
+    <meta charset="UTF-8">
+</head>
 <body>
 
     {% load crispy_forms_tags %}         
 
     <!--Register--> 
-    <div class="d-flex align-items-center">
-        <div class="container py-2">
-        </div>
     <div class="container py-5">
-        <h1 class="text-center">Register</h1>
+        <h1>Register</h1>
         <form method="POST">
             {% csrf_token %}
-            {{ register_form|crispy }}   
-            {% if messages %}
-                {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    {{ message }}
-                </div>
-                {% endfor %}
-            </ul>
-            {% endif %}                 
-            <button class="btn btn-info btn-block mb-4" type="submit">Register</button>
+            {{ register_form|crispy }}                    
+            <button class="btn btn-primary" type="submit">Register</button>
         </form>
         <p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
     </div>
-    <div class="container py-2">
-    </div>
-    </div>
 
-
- <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
