A user can send a follow request now

--- a/SocialDistribution/author/templates/author/listUsers.html
+++ b/SocialDistribution/author/templates/author/listUsers.html
@@ -18,7 +18,7 @@
 
       <tr>
         <td>
-          <a href="{% url 'view-profile' result.userId %}">
+          <a href="{% url 'view-profile' result.userid %}">
           {{ result.username }}
           </a>
         </td>
