--- a/SocialDistribution/follower/templates/follower/snippets/send_follow_request.html
+++ b/SocialDistribution/follower/templates/follower/snippets/send_follow_request.html
@@ -1,6 +1,6 @@
 <script>
 
-	function sendFriendRequest(id, uiUpdateFunction){
+	function sendFollowRequest(id, uiUpdateFunction){
 		console.log("id:" + id)
 		payload = {
 			"csrfmiddlewaretoken": "{{ csrf_token }}",
