--- a/SocialDistribution/author/templates/author/base.html
+++ b/SocialDistribution/author/templates/author/base.html
@@ -11,7 +11,7 @@
     <title>Social Distribution</title>
   </head>
   <body>
-    {% include 'author\navbar.html' %}
+    {% include 'author/navbar.html' %}
     <br/>
     {% block content %}
     
