--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -1,29 +1,49 @@
 <!doctype html>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand bg-dark text-white" href="#">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark mb-4">
+  <div class="container">
+      <a class="navbar-brand text-white" >SocialDistribution</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+      </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link bg-dark text-white" href="#">Profile</a>
-        </li>
+          <li class="nav-item">
+              <a class="nav-link" >Authors</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'post:index' %}"">Posts</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'post:myPosts' %}"">My Posts</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'post:createpost' %}"">Create a Post</a>
+          </li>
+
       </ul>
-      <form class="form-inline my-2 my-lg-0" method = POST action="{% url 'search' %}">
-
-        {% csrf_token %}
-
-        <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search Users" aria-label="Search">
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-      </form>
-
-      <ul class="navbar-nav my-2 my-lg-0">
-        <li class="nav-item">
-          <a class="nav-link bg-dark text-white" href="#">Logout</a>
-        </li>
+      {% if request.user.is_authenticated %}
+      <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{request.user.displayName}}
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" >My Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'logout_url' %}">Logout</a>
+          </div>
+          </li>
       </ul>
-    </div>
-  </nav>
+      {% else %}
+          <form class="form-inline my-2 my-lg-0">
+              <a href={% url 'login_url' %} class="btn btn-secondary">Login</a>
+              <a href={% url 'register_url' %} class="btn btn-primary ml-2">Register</a>
+          </form>
+      {% endif %}
+      </div>
+  </div>
+</nav>
