--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -13,15 +13,15 @@
               <a class="nav-link" >Authors</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'post:index' %}"">Posts</a>
+              <a class="nav-link" href="{% url 'post:index' %}">Posts</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'post:myPosts' %}"">My Posts</a>
+            <a class="nav-link" href="{% url 'post:myPosts' %}">My Posts</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'post:createpost' %}"">Create a Post</a>
+            <a class="nav-link" href="{% url 'post:createpost' %}">Create a Post</a>
           </li>
 
       </ul>
