list remote author's name

--- a/SocialDistribution/author/templates/author/listUsers.html
+++ b/SocialDistribution/author/templates/author/listUsers.html
@@ -11,19 +11,18 @@
           <table class="table">
             <thead>
               <tr>
-                <th scope="col">Username</th>
+                <th scope="col">Authors you might like</th>
               </tr>
             </thead>
 
             <tbody>
-                {% if q %}
-
-                {% for result in results %}
+                {% if user %}
+                
+                {% for result in items %}
 
               <tr>
                 <td>
-                  <a href="{% url 'view-profile' result.userid %}">
-                  {{ result.username }}
+                  <p>{{ result.displayName }}</p>
                   </a>
                 </td>
                 {% endfor %}
