tried to do profile(not working)

--- a/SocialDistribution/author/templates/author/listUsers.html
+++ b/SocialDistribution/author/templates/author/listUsers.html
@@ -22,7 +22,9 @@
 
               <tr>
                 <td>
-                  <p>{{ result.displayName }}</p>
+                  <a href="{% url 'singleForeignAuthor' result.id %}">{{ result.displayName }} </a>
+
+
                   </a>
                 </td>
                 {% endfor %}
