--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -12,6 +12,11 @@
           <li class="nav-item">
               <a class="nav-link" href="{% url 'allForeignAuthors' %}">Foreign Authors</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'post:foreignPosts' %}">Foreign Posts</a>
+          </li>
+
           <li class="nav-item">
               <a class="nav-link" href="{% url 'post:index' %}">Posts</a>
           </li>
@@ -23,6 +28,8 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'post:createpost' %}">Create a Post</a>
           </li>
+
+        
 
       </ul>
       {% if request.user.is_authenticated %}
