get user remote user profile

--- a/SocialDistribution/author/templates/author/profile.html
+++ b/SocialDistribution/author/templates/author/profile.html
@@ -82,10 +82,10 @@
                 <h2>Profile</h2>
                 <hr>
                 <h5 class="card-text">Username</h5>
-                {{ username }}
+                {{ displayName }}
                 <p class="card-text"></p>
-                <h5 class="card-text">Email</h5>
-                {{ github }}
+                <h5 class="card-text">Github</h5>
+                {{ github_url }}
                 <p class="card-text"></p>
                 <hr>
                 <div>
