--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -18,7 +18,7 @@
           </li>
 
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'post:index' %}">Posts</a>
+              <a class="nav-link" href="{% url 'post:index' %}">Local Posts</a>
           </li>
 
           <li class="nav-item">
