--- a/SocialDistribution/author/templates/author/profile.html
+++ b/SocialDistribution/author/templates/author/profile.html
@@ -100,15 +100,15 @@
                                             <h4 class="card-title"> 
                                                 <a href="{{ post.id }}" style="color: black;">{{ post.title }}</a>
                                             </h4>
-                                            <p style="font-size:medium"><strong>By </strong><a class="author-link" style="color:white" href="{{host}}/service/authors/{{ post.author.id }}">{{ post.author.displayName }}</a></p>
+                                            <p style="font-size:medium"><strong>By </strong><a class="author-link" style="color:white" href="{{host}}/authors/{{ post.author.id }}">{{ post.author.displayName }}</a></p>
                                         </div>
                                         <div class="col-3 pb-3">
                                             {% if userAuthor and userAuthor.id == post.author.id %}
                                             <div class="col pb-3">
-                                                <a href="{{host}}/service/editpost/{{post.id}}"><button class="btn btn-warning float-right" type="button" class="btn">Edit post</button></a>
+                                                <a href="{{host}}/editpost/{{post.id}}"><button class="btn btn-warning float-right" type="button" class="btn">Edit post</button></a>
                                             </div>
                                             <div class="col mt-4">
-                                                <a href="{{host}}/service/deletepost/{{post.id}}"><button class="btn btn-outline-light float-right" type="button" class="btn" onclick="return confirm('Are you sure?');">Delete post</button></a>
+                                                <a href="{{host}}/deletepost/{{post.id}}"><button class="btn btn-outline-light float-right" type="button" class="btn" onclick="return confirm('Are you sure?');">Delete post</button></a>
                                             </div>
                                             {% endif %}
                                         </div>
@@ -144,7 +144,7 @@
                                 <div id="comments-of-{{post.id}}">
                                     {% for comment in post.topComments %}
                                         <div class="comment">
-                                            <p><a class="author-link" href="{{host}}/service/authors/{{ comment.author.id }}">{{ comment.author.displayName }}</a>: {{comment.comment}}</p>
+                                            <p><a class="author-link" href="{{host}}/authors/{{ comment.author.id }}">{{ comment.author.displayName }}</a>: {{comment.comment}}</p>
                                         </div>
                                     {% endfor %}
                                 </div>
