--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'allForeignAuthors' %}">Foreign Authors</a>
+              <a class="nav-link" href="{% url 'allForeignAuthors' %}">Authors</a>
           </li>
 
           <li class="nav-item">
