--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -29,8 +29,6 @@
             <a class="nav-link" href="{% url 'post:createpost' %}">Create a Post</a>
           </li>
 
-        
-
       </ul>
       {% if request.user.is_authenticated %}
       <ul class="navbar-nav">
@@ -39,7 +37,7 @@
               {{request.user.displayName}}
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" >My Profile</a>
+              <a class="dropdown-item" href="{% url 'author_profile' request.user.id %}">My Profile</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout_url' %}">Logout</a>
           </div>
