--- a/SocialDistribution/author/templates/author/profile.html
+++ b/SocialDistribution/author/templates/author/profile.html
@@ -76,9 +76,11 @@
         <div class="card" style="width: 50rem">
             <div class="card-body">
 				{% if request.user.is_authenticated %}
-					<button class="btn-info float-right mr-2">
-						Follow 
-					</button>
+                {% if is_self == False %}
+                <a  class="btn btn-info float-right mr-2" href="#">Follow</a>
+				<div class="d-flex flex-column mt-4">
+				</div>
+                    {% endif %}
                 <h2>Profile</h2>
                 <hr>
                 <h5 class="card-text">Username</h5>
@@ -87,13 +89,26 @@
                 <h5 class="card-text">Github</h5>
                 {{ github_url }}
                 <p class="card-text"></p>
+                {% if is_self %}
+		  		<a  class="btn btn-info float-right mr-2" href="#">Update</a>
+				<div class="d-flex flex-column mt-4">
+				</div>
+		  		{% endif %}
+
+                </div>
+                </div>
+                <div>
+                    <hr>
+                </div>
+
+                <div class="card mt-5" style="width: 50rem; border-color: white;">
                 <h5 class="card-text">Posts</h5>
                 {% if posts %}
                 {% for post in posts %}
                 <div class="post_container">
-                    <div class="row justify-content-center">
-                        <div class="mt-0" >
-                            <div class="card" style="width: 50rem;">
+                    <div class="row justify-content-center" >
+                        <div class="mt-2" >
+                            <div class="ml-3" style="width: 50rem;">
                                 <div class="card-header text-black" style="background-color: #778899;">
                                     <div class="row">
                                         <div class="col">
@@ -158,12 +173,6 @@
                 <hr>
                 <div>
 
-                <!-- If Auth user is viewing their own profile -->
-		  		{% if is_self %}
-		  		<a  class="btn btn-info float-right mr-2" href="#">Update</a>
-				<div class="d-flex flex-column mt-4">
-				</div>
-		  		{% endif %}
                 
             </div>
             </div>
@@ -173,7 +182,6 @@
 
 		
 	</div>
-    </div>
 </div>
 
 
