--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -29,6 +29,13 @@
             <a class="nav-link" href="{% url 'post:createpost' %}">Create a Post</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'post:inboxs' %}">Inbox</a>
+          </li>
+        
+          
+          
+
         
 
       </ul>
