updated the UI for edit post

--- a/SocialDistribution/author/templates/author/editProfile.html
+++ b/SocialDistribution/author/templates/author/editProfile.html
@@ -13,7 +13,7 @@
                     <div class="card" style="width: 50rem">
                         <div class="card-header text-black" style="background-color: white;">
                             <a href="{% url 'allForeignAuthors' %}" class="btn btn-outline-danger btn-med float-right">Cancel</a>
-                            <button class="btn btn-primary btn-med float-right mr-2" type="submit">Save</button>
+                            <button class="btn btn-info btn-med float-right mr-2" type="submit">Save</button>
                             <h2 class="card-title">Edit Profile</h2>
                         </div>
                         <div class="card-body">
