--- a/SocialDistribution/author/templates/author/profile.html
+++ b/SocialDistribution/author/templates/author/profile.html
@@ -85,7 +85,7 @@
                 <h2>Profile</h2>
                 <hr>
                 <img src="{% static 'author/images/defaultProfile.png' %}" class="float-right mr-2" style="height: 16%; ">
-                <h5 class="card-text">displayName</h5>
+                <h5 class="card-text">Display Name</h5>
                 {{ displayName }}
 
                 <p class="card-text"></p>
