friend's post page finished

--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -26,6 +26,10 @@
           </li>
 
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'post:friendPosts' %}">Friends' Posts</a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'post:createpost' %}">Create a Post</a>
           </li>
           <li class="nav-item">
