--- a/SocialDistribution/author/templates/author/profile.html
+++ b/SocialDistribution/author/templates/author/profile.html
@@ -68,7 +68,58 @@
 .message-btn-text{
     font-weight: 500;
 }
+/* Popup container */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
 
+/* The actual popup (appears on top) */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  up: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
 
 </style>
 
@@ -97,8 +148,12 @@
                 <p class="card-text"></p>
                 {% if is_self %}
 		  		<a  class="btn btn-info float-right mr-2" href="{% url 'editProfile' %}">Update</a>
-				<div class="d-flex flex-column mt-4">
-				</div>
+                        <button class="popup" id="{{request.user.id}}" type="submit"  value='{{host}}/service/authors/{{request.user.id}}/followers' onclick=FollowerFunction(value,id)>Followers
+                            <div class="popuptext" id="myData">Followers:
+                                
+                            </div>
+                        </button>
+ 
 		  		{% endif %}
 
                 </div>
@@ -179,6 +234,29 @@
                 <hr>
                 <div>
                 <script>
+                    function FollowerFunction(value, id){
+                        fetch(value, {
+                        method: 'GET',
+                        headers: {
+                            'X-CSRFToken': "{{ csrf_token }}",
+                            'Content-Type': 'application/json',
+                        },
+                    }).then(res =>  res.json())
+                    .then(data => {
+                        appendData(data);
+                    });
+                    function appendData(data){
+                        var mainContainer = document.getElementById("myData");
+                        for (var i = 0; i < data.items.length; i++) {
+                          var div = document.createElement("div");
+                          div.innerHTML = data.items[0].username;
+                          mainContainer.appendChild(div);
+                        }
+                        mainContainer.classList.toggle("show");
+                    
+                }
+            }
+
                     function FollowFunction(value,name,id){
                         fetch(value, {
                             method: 'PUT',
@@ -206,6 +284,7 @@
                            })
                            })
                     }
+                
                     
                 </script>
             
