--- a/SocialDistribution/author/templates/author/login.html
+++ b/SocialDistribution/author/templates/author/login.html
@@ -4,8 +4,12 @@
 
 {% block content %}
 
+
+
+
     <div class="row justify-content-center">
         <div class="col-6">
+            <div class="container py-5">
             {% if messages %}
                 {% for message in messages %}
                 <div class="alert alert-{{ message.tags }}" role="alert">
@@ -17,6 +21,9 @@
                 {% endfor %}
             </ul>
             {% endif %}
+            
+    
+            
             <div class="card">
                 <div class="card-body">
                     <h2>Welcome back!</h2>
@@ -30,10 +37,12 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" name="password" class="form-control">
                         </div>
-                        <button type="submit" class="btn btn-info">Login</button>
+                        <button type="submit" class="btn btn-info btn-block mb-4">Login</button>
                     </form>
+                    <p class="text-center">Don't have an account? <a href={% url 'register_url' %}>Create an account</a>.</p>
                 </div>
             </div>
         </div>
+        </div>
     </div>
-{% endblock %}
+    {% endblock %}
