--- a/SocialDistribution/author/templates/author/navbar.html
+++ b/SocialDistribution/author/templates/author/navbar.html
@@ -6,28 +6,32 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
+
+      {% if request.user.is_authenticated %}
   
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'post:myPosts' %}">My Posts</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'post:index' %}">Local Posts</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'post:foreignPosts' %}">Foreign Posts</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'post:friendPosts' %}">Friends' Posts</a>
+        </li>
+
           <li class="nav-item">
               <a class="nav-link" href="{% url 'allForeignAuthors' %}">Authors</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'post:foreignPosts' %}">Foreign Posts</a>
-          </li>
-
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'post:index' %}">Local Posts</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'post:myPosts' %}">My Posts</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'post:friendPosts' %}">Friends' Posts</a>
-          </li>
 
           <li class="nav-item">
             <a class="nav-link" href="{% url 'post:createpost' %}">Create a Post</a>
@@ -35,6 +39,8 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'post:inboxs' %}">Inbox</a>
           </li>
+
+          {% endif %}
         
 
       </ul>
@@ -54,7 +60,7 @@
       {% else %}
           <form class="form-inline my-2 my-lg-0">
               <a href={% url 'login_url' %} class="btn btn-secondary">Login</a>
-              <a href={% url 'register_url' %} class="btn btn-primary ml-2">Register</a>
+              <a href={% url 'register_url' %} class="btn btn-info ml-2">Register</a>
           </form>
       {% endif %}
       </div>
