--- a/SocialDistribution/author/templates/author/profile.html
+++ b/SocialDistribution/author/templates/author/profile.html
@@ -148,7 +148,8 @@
                 <p class="card-text"></p>
                 {% if is_self %}
 		  		<a  class="btn btn-info float-right mr-2" href="{% url 'editProfile' %}">Update</a>
-                        <button class="popup" id="{{request.user.id}}" type="submit"  value='{{host}}/service/authors/{{request.user.id}}/followers' onclick=FollowerFunction(value,id)>Followers
+
+                    <button class="popup btn-warning mr-2" id="{{request.user.id}}" type="submit"  value='{{host}}/service/authors/{{request.user.id}}/followers' onclick=FollowerFunction(value,id)>Followers
                             <div class="popuptext" id="myData">Followers:
                                 
                             </div>
@@ -166,10 +167,11 @@
                 <h5 class="card-text">Posts</h5>
                 {% if posts %}
                 {% for post in posts %}
+
                 <div class="post_container">
                     <div class="row justify-content-center" >
-                        <div class="mt-2" >
-                            <div class="ml-3" style="width: 50rem;">
+                        <div class="mt-0" >
+                            <div class="card" style="width: 50rem;">
                                 <div class="card-header text-black" style="background-color: #778899;">
                                     <div class="row">
                                         <div class="col">
@@ -190,8 +192,6 @@
                                         </div>
                                     </div>
                                 </div>
-
-                                <hr>
                                 
                                 <div class="card-body">
                                     <p class="field-label"><strong>Description: </strong>{{post.description}}</p>
@@ -204,34 +204,41 @@
                                     <p>{{post.content}}</p>
                                     {% endif %}
                                 </div>
-
-                                <hr>
                                 
                                 <div class="card-footer">
-                                <div>
-                                    <button id="{{post.id}}-like-button" type="submit" name="post_id" value="{{post.id}}" class="btn"><span id="like-count-{{post.id}}">{{post.numberOfLikes}}</span> | Like</button>
-                                    <a href="{{post.id}}"><button type="button" class="btn">Comments</button></a>
-                                    <button type="button" class="btn" id="addcomment-{{post.id}}">Add comment</button>
-                                </div>
-                                
-                                <hr>
-                                
-                                <p class="field-label"><b>Comments: </b></p>
-                                <div id="comments-of-{{post.id}}">
-                                    {% for comment in post.topComments %}
+                                    <!-- Like Button -->
+                                    <!-- TODO: Better CSS for Like Button -->
+                                    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                                    
+                                    <div class="mr-0">
+                                        <button id="count-{{post.id}}" type="submit" name="{{post.id}}" value = '{{host}}/service/authors/{{request.user.id}}/posts/{{post.id}}/getalllikes'
+                                        onclick="LikeCount(value,id)" class="btn" style="margin-right: 0%">Like |</button> 
+                           
+                                        <button id="{{post.author.id}}" type="submit"  value = '{{host}}/service/authors/{{request.user.id}}/posts/{{post.id}}/likes' name='{{host}}/service/authors/{{request.user.id}}/inbox'  
+                                        onclick="LikeFunction(value,name,id)" class="btn" style="margin-right: 0%">👍</button> 
+                                    </div>
+                                    
+                                    <p class="field-label"><b>Comments: </b></p>
+                                    <div id="comments-of-{{post.id}}">
+                                        
+                                        {% for comment in post.topComments %}
                                         <div class="comment">
                                             <p><a class="author-link" href="{{host}}/authors/{{ comment.author.id }}">{{ comment.author.displayName }}</a>: {{comment.comment}}</p>
                                         </div>
-                                    {% endfor %}
-                                </div>
+                                        {% endfor %}
+                                    </div>
+                                <br>
                             </div>
+
                         {% endfor %}
+                        
                     </div>
+                    
                 </div>
                     {% else %}
                         <p>No posts are available.</p>
                     {% endif %}
-                <hr>
+
                 <div>
                 <script>
                     function FollowerFunction(value, id){
@@ -284,15 +291,71 @@
                            })
                            })
                     }
+
+                function LikeCount(value,id){     
+                fetch(value, {
+                    method: 'GET',
+                    headers: {
+                        'X-CSRFToken': "{{ csrf_token }}",
+                        'Content-Type': 'application/json',
+                    },
+                }).then(res =>  res.json())
+                .then(data => {
+                    appendData(data);
+                });
+                function appendData(data){
+                    document.getElementById(id).innerHTML = data.length;
+                }
+               
+                 
+                }
+            
+                function LikeFunction(value,inbox,title){
+               
+               fetch(value, {
+                   method: 'GET',
+                   headers: {
+                       'X-CSRFToken': "{{ csrf_token }}",
+                       'Content-Type': 'application/json',
+                   },
+                    
+               }).then(res =>  res.json())
+               .then(data =>  {
+                   if(data == 404){
+                      fetch(value, {
+                           method: 'POST',
+                           headers: {
+                       'X-CSRFToken': "{{ csrf_token }}",
+                       'Content-Type': 'application/json',
+                       },
+                   }).then(res =>  res.json())
+                   .then(item => {
+                        
+                       item.id = value;
+                       item.title = title;
+                       item.author_id = inbox;
+                       let result = {
+                           type: "like",
+                           data: item,
+                       };
+                        
+                       alert("You have liked the post");
+                       fetch(inbox,{
+                           method: 'POST',
+                           headers: {
+                           'X-CSRFToken' : "{{ csrf_token }}",
+                           'Content-Type': 'application/json',
+                       },
+                       body: JSON.stringify(result)
+                   })
+                   })
+               }
+               })
+     
                 
+           }
                     
                 </script>
-            
-		  		{% if is_self %}
-		  		<a  class="btn btn-info float-right mr-2" href="#">Update</a>
-				<div class="d-flex flex-column mt-4">
-				</div>
-		  		{% endif %}
 
                 
             </div>
