--- a/SocialDistribution/author/templates/author/register.html
+++ b/SocialDistribution/author/templates/author/register.html
@@ -7,6 +7,8 @@
 {% block content %}
 
 <div class="row justify-content-center">
+    <div class="col-6">
+    <div class="container py-5">
     <div class="card">
         <div class="card-body">
             <h2>Join Social Distribution</h2>
@@ -36,10 +38,13 @@
 
                 {{form.errors}}
         
-                <input type="submit" name = "Create Author" class = "btn btn-info">
+                <input type="submit" name = "Create Author" class = "btn btn-info btn-block mb-4">
             </form>
+            <p class="text-center">If you already have an account, <a href={% url 'login_url' %}>login</a> instead.</p>
         </div>
         </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
